@@ -1,0 +1,4 @@
+set terminal epslatex;
+set output "order1.tex";
+plot sin(x);
+# vim: set syntax=gnuplot expandtab tabstop=4 shiftwidth=4 nospell:
