@@ -1,0 +1,52 @@
+#! /usr/bin/env python
+#
+# Copyright (c) 2013 by Pawel Tomulik
+# 
+# Permission is hereby granted, free of charge, to any person obtaining a copy
+# of this software and associated documentation files (the "Software"), to deal
+# in the Software without restriction, including without limitation the rights
+# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+# copies of the Software, and to permit persons to whom the Software is
+# furnished to do so, subject to the following conditions:
+# 
+# The above copyright notice and this permission notice shall be included in all
+# copies or substantial portions of the Software.
+# 
+# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+# SOFTWARE
+
+__docformat__ = "restructuredText"
+
+"""
+TODO: write documentation
+"""
+
+import TestSCons
+
+test = TestSCons.TestSCons()
+
+test.dir_fixture('image')
+test.dir_fixture('../../../../gnuplot','site_scons/site_tools/gnuplot')
+
+# Normal invocation
+test.run()
+test.must_exist(test.workpath('order1.tex'))
+test.must_exist(test.workpath('order1.eps'))
+test.must_exist(test.workpath('order1.txt'))
+test.must_match('order1.txt', 'order1.tex:order1.eps')
+
+# Cleanup
+test.run(arguments='-c')
+test.must_not_exist(test.workpath('order1.tex'))
+test.must_not_exist(test.workpath('order1.eps'))
+
+# Local Variables:
+# # tab-width:4
+# # indent-tabs-mode:nil
+# # End:
+# vim: set syntax=python expandtab tabstop=4 shiftwidth=4:
